package dominio;

public class Sugerencia {
  private String descripcion;

  Sugerencia(String descripcion) {
    this.descripcion = descripcion;
  }

}
