package dominio;

abstract class UniformeFactory {
  abstract Uniforme crearUniforme();
}
