@startuml

enum MaterialPrenda{
	JEAN,
	CUERO
}
enum CategoriaPrenda{
	PARTE_SUPERIOR,
	CALZADO,
	PARTE_INFERIOR,
	ACCESORIOS
}
enum TipoPrenda{
	CategoriaPrenda categoria;
	CategoriaPrenda getCategoria()
}
enum TramaPrenda{
    LISA,
    RAYADA,
    CON_LUNARES,
    A_CUADROS,
    ESTAMPADO
}
class Prenda{
	TipoPrenda tipo;
	MaterialPrenda material;
	TramaPrenda trama;
	Color colorPrimario;
	Color colorSecundario;
}
class BorradorPrenda{
    TipoPrenda tipo;
    MaterialPrenda material;
    TramaPrenda trama;
    Color colorPrimario;
    Color colorSecundario;
    setTipoPrenda(TipoPrenda);
    setMaterialPrenda(MaterialPrenda);
    setTramaPrenda(TramaPrenda);
    setColorPrimario(Color);
    setColorSecundario(Color);
    Prenda crearPrenda();
}
class Sugerencia{
    String descripcion;
}

class Uniforme{
    Prenda prendaSuperior;
    Prenda prendaInferior;
    Prenda calzado;
    List<Sugerencia> sugerencias;
    void recibirSugerencia(Sugerencia);

}

abstract UniformeFactory{
    Uniforme crearUniforme();

}
class UniformeColegioSanJuanFactory {
    Uniforme crearUniforme();
}
class UniformeInstitutoJohnsonFactory {
    Uniforme crearUniforme();
}


Prenda --> TipoPrenda
MaterialPrenda <-up- Prenda
Prenda -down-> "2" Color
TipoPrenda --> CategoriaPrenda
Prenda -> TramaPrenda
BorradorPrenda .> Prenda
UniformeFactory .> Uniforme
Uniforme --> "3" Prenda
Uniforme -> "*" Sugerencia
UniformeColegioSanJuanFactory --|> UniformeFactory
UniformeInstitutoJohnsonFactory --|> UniformeFactory
@enduml